testsuite/resolution/compile-fail/module.verona
// Reported errors should point to the proper source location.
use "module/child.verona"
// CHECK-L: child.verona:2:8: error: Cannot find value for symbol 'T'
